--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@emotion/cache": "11.10.5",
     "@emotion/react": "11.10.6",
     "@emotion/styled": "11.10.6",
+    "@tanstack/react-query": "4.24.10",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.4.3",
