--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "NODE_ENV='development' next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -49,6 +49,7 @@
     "@types/react-calendar": "3.9.0",
     "@types/react-dom": "18.0.11",
     "@types/react-table": "7.7.14",
+    "dotenv": "16.0.3",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.1",
     "eslint-config-prettier": "8.6.0",
