--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@emotion/cache": "11.10.5",
     "@emotion/react": "11.10.6",
     "@emotion/styled": "11.10.6",
+    "@hookform/resolvers": "2.9.11",
     "@tanstack/react-query": "4.24.10",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "14.0.0",
@@ -34,13 +35,15 @@
     "react-custom-scrollbars-2": "4.5.0",
     "react-dom": "18.2.0",
     "react-dropzone": "12.0.4",
+    "react-hook-form": "7.43.5",
     "react-icons": "4.7.1",
     "react-is": "18.2.0",
     "react-table": "7.8.0",
     "stylis": "4.1.3",
     "stylis-plugin-rtl": "2.1.1",
     "typescript": "4.9.5",
-    "web-vitals": "3.1.1"
+    "web-vitals": "3.1.1",
+    "zod": "3.21.4"
   },
   "devDependencies": {
     "@types/jest": "29.4.0",
