⚒  use react query to get data
Signed-off-by: Brando Vidal <yisusdracon@gmail.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,7 @@
     "baseUrl": "./",
     "paths": {
       "@/*": ["./src/*"],
+      "@api/*": ["./src/api/*"],
       "@assets/*": ["./src/assets/*"],
       "@common/*": ["./src/common/*"],
       "@components/*": ["./src/components/*"],
