--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.4.3",
     "apexcharts": "3.37.1",
+    "axios": "1.3.4",
     "framer-motion": "10.0.1",
     "just-debounce-it": "3.2.0",
     "just-is-empty": "3.3.0",
