--- a/package.json
+++ b/package.json
@@ -8,60 +8,64 @@
     "start": "next start",
     "lint": "next lint",
     "lint-fix": "next lint --fix",
+    "clean-build": "rimraf build",
+    "clean-install": "rimraf node_modules .next package-lock.json yarn.lock pnpm-lock.yaml",
+    "clean": "pnpm run clean-build && pnpm run clean-install",
     "predeploy": "yarn run build",
     "deploy": "gh-pages -d build"
   },
   "dependencies": {
-    "@chakra-ui/icons": "2.0.17",
-    "@chakra-ui/react": "2.5.3",
+    "@chakra-ui/icons": "2.0.19",
+    "@chakra-ui/react": "2.6.1",
     "@chakra-ui/system": "2.5.3",
     "@chakra-ui/theme-tools": "2.0.16",
-    "@emotion/cache": "11.10.5",
-    "@emotion/react": "11.10.6",
-    "@emotion/styled": "11.10.6",
-    "@hookform/resolvers": "3.0.0",
-    "@tanstack/react-query": "4.28.0",
-    "@tanstack/react-query-devtools": "4.28.0",
+    "@emotion/cache": "11.11.0",
+    "@emotion/react": "11.11.0",
+    "@emotion/styled": "11.11.0",
+    "@hookform/resolvers": "3.1.0",
+    "@tanstack/react-query": "4.29.7",
+    "@tanstack/react-query-devtools": "4.29.7",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.4.3",
-    "apexcharts": "3.37.2",
-    "axios": "1.3.4",
-    "framer-motion": "10.9.1",
+    "apexcharts": "3.40.0",
+    "axios": "1.4.0",
+    "framer-motion": "10.12.16",
     "just-debounce-it": "3.2.0",
-    "just-is-empty": "3.3.0",
-    "next": "13.2.4",
+    "just-is-empty": "3.4.1",
+    "next": "13.4.3",
     "react": "18.2.0",
     "react-apexcharts": "1.4.0",
     "react-calendar": "4.0.0",
     "react-custom-scrollbars-2": "4.5.0",
     "react-dom": "18.2.0",
     "react-dropzone": "14.2.3",
-    "react-hook-form": "7.43.8",
+    "react-hook-form": "7.43.9",
     "react-icons": "4.8.0",
     "react-is": "18.2.0",
     "react-table": "7.8.0",
-    "stylis": "4.1.3",
+    "rimraf": "^5.0.1",
+    "stylis": "4.2.0",
     "stylis-plugin-rtl": "2.1.1",
-    "typescript": "5.0.2",
-    "web-vitals": "3.3.0",
+    "typescript": "5.0.4",
+    "web-vitals": "3.3.1",
     "zod": "3.21.4",
-    "zustand": "4.3.6"
+    "zustand": "4.3.8"
   },
   "devDependencies": {
-    "@types/jest": "29.5.0",
-    "@types/node": "18.15.8",
-    "@types/react": "18.0.29",
-    "@types/react-calendar": "3.9.0",
-    "@types/react-dom": "18.0.11",
+    "@types/jest": "29.5.1",
+    "@types/node": "20.2.3",
+    "@types/react": "18.2.7",
+    "@types/react-calendar": "4.1.0",
+    "@types/react-dom": "18.2.4",
     "@types/react-table": "7.7.14",
     "dotenv": "16.0.3",
-    "eslint": "8.36.0",
-    "eslint-config-next": "13.2.4",
+    "eslint": "8.41.0",
+    "eslint-config-next": "13.4.3",
     "eslint-config-prettier": "8.8.0",
     "eslint-config-standard-with-typescript": "34.0.1",
     "gh-pages": "5.0.0",
-    "prettier": "2.8.7"
+    "prettier": "2.8.8"
   },
   "browserslist": {
     "production": [
