--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@testing-library/user-event": "14.4.3",
     "apexcharts": "3.40.0",
     "axios": "1.4.0",
+    "classnames": "2.3.2",
     "dayjs": "1.11.9",
     "framer-motion": "10.12.16",
     "just-debounce-it": "3.2.0",
@@ -45,6 +46,7 @@
     "react-hook-form": "7.44.1",
     "react-icons": "4.8.0",
     "react-is": "18.2.0",
+    "react-number-format": "5.3.0",
     "react-select": "5.7.4",
     "react-table": "7.8.0",
     "rimraf": "5.0.1",
