⚒  update ts-standard

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint": "next lint",
     "lint-fix": "next lint --fix",
     "clean-build": "rimraf out/ .next/",
-    "clean-install": "rimraf node_modules .next package-lock.json yarn.lock pnpm-lock.yaml",
+    "clean-install": "rimraf node_modules/ .next/ package-lock.json yarn.lock pnpm-lock.yaml",
     "clean": "pnpm run clean-build && pnpm run clean-install",
     "predeploy": "yarn run build",
     "deploy": "gh-pages -d build"
@@ -90,7 +90,9 @@
   "ts-standard": {
     "project": "./tsconfig.json",
     "ignore": [
-      "dist/",
+      ".next/",
+      ".vscode/",
+      "out/",
       "node_modules/",
       "src/**/*.js",
       "src/**/*.d.ts",
