--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,7 @@
     "no-tabs": ["error", { "allowIndentationTabs": true }],
     "react-hooks/exhaustive-deps": ["warn", { "additionalHooks": "useRecoilCallback" }],
     "@typescript-eslint/no-unused-vars": "warn",
-    "@typescript-eslint/explicit-function-return-type": "error",
+    "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/strict-boolean-expressions": "warn",
     "@typescript-eslint/consistent-indexed-object-style": ["warn", "index-signature"],
     "@typescript-eslint/member-delimiter-style": [
