--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "axios": "1.4.0",
     "classnames": "2.3.2",
     "dayjs": "1.11.9",
+    "flatpickr": "4.6.13",
     "framer-motion": "10.12.16",
     "just-debounce-it": "3.2.0",
     "just-is-empty": "3.4.1",
@@ -46,6 +47,7 @@
     "react-custom-scrollbars-2": "4.5.0",
     "react-dom": "18.2.0",
     "react-dropzone": "14.2.3",
+    "react-flatpickr": "3.10.13",
     "react-hook-form": "7.44.1",
     "react-icons": "4.8.0",
     "react-is": "18.2.0",
@@ -66,6 +68,7 @@
     "@types/react": "18.2.7",
     "@types/react-calendar": "4.1.0",
     "@types/react-dom": "18.2.4",
+    "@types/react-flatpickr": "3.8.8",
     "@types/react-table": "7.7.14",
     "dotenv": "16.0.3",
     "eslint": "8.41.0",
